<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>uk.ac.ebi.fg.annotare2.prototypes</groupId>
    <artifactId>frontier</artifactId>
    <packaging>war</packaging>
    <version>1.0</version>
    <name>GWT Frontier-like Prototype</name>

    <properties>
        <!-- Convenience property to set the GWT version -->
        <gwt.version>2.7.0</gwt.version>
        <slf4j.version>1.7.7</slf4j.version>
        <tomcat.version>7.0.42</tomcat.version>
        
        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- http://colorschemedesigner.com/csd-3.5/#3L61Tw0w0w0w0 -->
        <color.p1>#1240AB</color.p1>
        <color.p2>#2A4480</color.p2>
        <color.p3>#06266F</color.p3>
        <color.p4>#4671D5</color.p4>
        <color.p5>#6C8CD5</color.p5>
        <color.a1>#3914AF</color.a1>
        <color.a2>#412C84</color.a2>
        <color.a3>#200772</color.a3>
        <color.a4>#6A48D7</color.a4>
        <color.a5>#876ED7</color.a5>
        <color.b1>#009999</color.b1>
        <color.b2>#1D7373</color.b2>
        <color.b3>#006363</color.b3>
        <color.b4>#33CCCC</color.b4>
        <color.b5>#5CCCCC</color.b5>
        <color.c1>#FFAA00</color.c1>
        <color.c2>#BF8F30</color.c2>
        <color.c3>#A66F00</color.c3>
        <color.c4>#FFBF40</color.c4>
        <color.c5>#FFD073</color.c5>
    </properties>


    <repositories>
        <repository>
            <id>artifactory-repo</id>
            <url>http://bar.ebi.ac.uk:8081/artifactory/repo/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>artifactory-repo</id>
            <url>http://bar.ebi.ac.uk:8081/artifactory/repo/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-jasper</artifactId>
            <version>${tomcat.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-catalina</artifactId>
            <version>${tomcat.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.htmlcompressor</groupId>
            <artifactId>htmlcompressor</artifactId>
            <version>1.5.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.javascript</groupId>
            <artifactId>closure-compiler</artifactId>
            <version>r1043</version>
        </dependency>
        <dependency>
            <groupId>com.yahoo.platform.yui</groupId>
            <artifactId>yuicompressor</artifactId>
            <version>2.4.6</version>
        </dependency>
        <dependency>
            <groupId>com.github.ziplet</groupId>
            <artifactId>ziplet</artifactId>
            <version>2.0.0</version>
            <scope>runtime</scope>
            <exclusions>
                <exclusion>
                    <groupId>javax.servlet</groupId>
                    <artifactId>servlet-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-nop</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.tuckey</groupId>
            <artifactId>urlrewritefilter</artifactId>
            <version>4.0.3</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.3.12</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- Generate compiled stuff in the folder used for developing mode -->
        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

        <plugins>

            <!-- GWT Maven Plugin -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwt.version}</version>
                <executions>
                    <execution>
                        <configuration>
                            <extraJvmArgs>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m -Dgwt.persistentunitcache=false</extraJvmArgs>
                            <logLevel>INFO</logLevel>
                            <style>DETAILED</style>
                            <strict>true</strict>
                            <module>uk.ac.ebi.fg.annotare2.prototype.frontier.FrontierApp</module>
                        </configuration>
                        <goals>
                            <goal>compile</goal>
                            <goal>test</goal>
                            <!-- <goal>generateAsync</goal> -->
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Copy static web files before executing gwt:run -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1.1</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>exploded</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <webappDirectory>${webappDirectory}</webappDirectory>
                    <warSourceExcludes>META-INF/*</warSourceExcludes>
                    <webResources>
                        <resource>
                            <directory>${basedir}/src/main/webapp</directory>
                            <includes>
                                <include>META-INF/context.xml</include>
                                <include>WEB-INF/web.xml</include>
                                <include>assets/css/*.css</include>
                            </includes>
                            <filtering>true</filtering>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>

